2010.08, Not released yet:

	Fixes all over the tree and new features.

	Bootloaders: Various cleanups, moved to boot/, added Barebox,
	removed yaboot. Support building u-boot from custom tarball.

	New GTK-based configurator, usable using 'make gconfig'.

	New packages: cgilua, copas, coxpcall, luafilesystem,
	luasocket, rings, wsapi, xavante

	Updated/fixed packages: busybox, cdrkit, file, gawk,
	gstreamer, intltool, ipsec-tools, iptables, libidn, lmbench,
	netperf, openssl, php, qt, sqlite, tn5250, usbutils,
	xkeyboard-config

	Removed packages: modutils

	Issues resolved (http://bugs.uclibc.org):

	#1753: lmbench: convert to generic package infrastructure
	#1771: Fakeroot and the target/generic/device_table.txt create bad...
	#1807: LZMA 4.32.7, Required header file(s) are missing
	#1813: xkeyboard-config fails to build because of intltool problem
	#1879: Bump iptables to 1.4.8
	#1885: Add a bunch of lua modules
	#1897: Bump libusb to 1.0.7
	#1903: Bump tn5250 to 0.17.4 and migrate to autotargets
	#1909: netperf-2.4.5 fails to build because of undeclared SOCK_DCCP
	#1927: Bump file to 5.03 and migrate to autotargets
	#1933: Bump gawk to 3.1.8 and migrate to autotargets
	#1945: PHP: add sqlite3 dependency when using external lib
	#1951: Bump openssl to 0.9.8o
	#1957: Bump sqlite to 3.6.23.1
	#1987: intltool: Fix spelling mistake
	#1999: Typo in path checking
	#2035: ipsec-tools-0.7.2 fails to build with gcc-4.4.x

2010.05, Released May 30th, 2010:

	Fixes all over the tree.

	Updated/fixed packages: coreutils, hal, libcap,
	lockfile-progs, ncftp, xserver_xorg-server

	Issues resolved (http://bugs.uclibc.org):

	#1789: binutils fails to build for i386
	#1843: Fix libcap build failure
	#1855: XORG Keyboard driver fails to compile

2010.05-rc3, Released May 27th, 2010:

	Fixes all over the tree.

	Updated/fixed packages: aumix, atk, avahi, bmon, busybox, cairo,
	cdrkit, dbus-glib, dbus-python, docker, enchant, fltk, gamin,